# collate-ai-sdk

python/: pyproject.toml
solutions/ai_data_sre/: .dockerignore  .env.example  Dockerfile  README.md  README_OLD.md  docker-compose.yml  requirements.txt  run_demo.sh
solutions/ai_data_sre/api/: __init__.py  server.py
solutions/ai_data_sre/bootstrap/: __init__.py  provision_metadata.py  provision_mysql.py
solutions/ai_data_sre/core/: __init__.py  config.py  faulty_rows.py  fixer.py  investigator.py  models.py  narrator.py  orchestrator.py  sentinel.py  slack_notifier.py  verifier.py
solutions/ai_data_sre/tests/: __init__.py  test_investigator.py  test_models.py  test_narrator.py  test_sentinel.py
solutions/ai_data_sre/ui/: __init__.py  app.py
solutions/ai_data_sre/ui/components/: __init__.py  incident_cards.py  lineage_graph.py
solutions/ai_data_sre/ui/pages/: __init__.py
solutions/ai_data_sre/web/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts  vitest.config.ts
solutions/ai_data_sre/web/src/: App.tsx  api.test.ts  api.ts  index.css  types.ts
solutions/ai_data_sre/web/src/components/: BrandIcons.tsx  EmptyState.test.tsx  EmptyState.tsx  FailureHistoryChart.tsx  HeaderBar.test.tsx  HeaderBar.tsx  IncidentCard.test.tsx  IncidentCard.tsx  IncidentDetailPanel.tsx  IncidentSection.test.tsx  IncidentSection.tsx  IncidentsPage.tsx  LineageGraph.tsx  PlaceholderPages.tsx  PromoCard.test.tsx  PromoCard.tsx  ReportsPage.tsx  Sidebar.test.tsx  Sidebar.tsx  Sparkline.test.tsx  Sparkline.tsx  StatCard.test.tsx  StatCard.tsx  ThemeSwitch.tsx  UnifiedDAG.tsx  UnifiedLineagePage.tsx
solutions/ai_data_sre/web/src/data/: constants.test.ts  constants.ts  seedDetails.ts  seedIncidents.ts  seedReports.ts
solutions/ai_data_sre/web/src/hooks/: useTheme.test.ts  useTheme.ts
solutions/ai_data_sre/web/src/test/: fixtures.ts
